@@ -1,8 +1,14 @@
 #!/bin/sh
 
+short_options='r:'
+long_options='reason:'
+
 usage() {
   cat <<EOF
 usage: debci-test [OPTIONS] srcpkg
+
+Options:
+  -r FILE, --reason FILE    add FILE contents to log as reason to run this test
 
 $@
 EOF
@@ -11,5 +17,7 @@ EOF
 set -eu
 
 export debci_base_dir=$(readlink -f $(dirname $(readlink -f $0))/..)
+. $debci_base_dir/lib/environment.sh
+. $debci_base_dir/lib/functions.sh
 
 $debci_base_dir/scripts/process-package "$@"
